# axiom-backend

./: .gitignore  README.md  pyproject.toml
config/: .secrets.toml
src/api/: __init__.py  api_models.py  main.py  notes.py  routes.py
src/axiom_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/notes_features/: main.py
src/notes_features/constants/: constants.py
src/notes_features/facade/: db.py  flashcard.py  note.py  pdf_parser.py  quiz.py
src/notes_features/utils/: config.py
